# fsl3cgm_data

./: .gitignore  README.md  pyproject.toml
data/: env.txt
docs/: env.txt  example.ipynb
src/fsl3cgm/: __init__.py  creds.py  exceptions.py  freestyle.py  logger.py
